[gd_scene load_steps=34 format=3 uid="uid://s2hi34bpb4s0"]

[ext_resource type="Texture2D" uid="uid://cu7xq1r7k5luw" path="res://assets/Cryo's Mini GUI/GUI/GUI_4x.png" id="1_0fyep"]
[ext_resource type="Script" path="res://scenes/GUI/stats_ui.gd" id="1_2cg24"]
[ext_resource type="PackedScene" uid="uid://vcaxf5e8be6l" path="res://scenes/GUI/debug_panel.tscn" id="3_jl48w"]
[ext_resource type="Texture2D" uid="uid://co0bcx87ek1cb" path="res://assets/Cryo's Mini GUI/Buttons/buttons_4x.png" id="4_i3bew"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4xuva"]
texture = ExtResource("1_0fyep")
texture_margin_left = 12.0
texture_margin_top = 12.0
texture_margin_right = 12.0
texture_margin_bottom = 12.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2
region_rect = Rect2(384, 0, 96, 96)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aru2k"]
texture = ExtResource("1_0fyep")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(512, 192, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ii1ue"]
texture = ExtResource("1_0fyep")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(512, 192, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_i5u3u"]
texture = ExtResource("1_0fyep")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(512, 128, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k3awb"]
texture = ExtResource("1_0fyep")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(512, 192, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6jyse"]
texture = ExtResource("1_0fyep")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
region_rect = Rect2(96, 0, 96, 96)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n6ucm"]
texture = ExtResource("1_0fyep")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0
expand_margin_left = 14.0
expand_margin_top = 20.0
expand_margin_right = 14.0
expand_margin_bottom = 8.0
axis_stretch_vertical = 2
region_rect = Rect2(384, 192, 64, 64)

[sub_resource type="Theme" id="Theme_lio7j"]
TabContainer/colors/drop_mark_color = Color(0, 0, 0, 1)
TabContainer/colors/font_disabled_color = Color(0, 0, 0, 1)
TabContainer/colors/font_hovered_color = Color(0, 0, 0, 1)
TabContainer/colors/font_outline_color = Color(0, 0, 0, 1)
TabContainer/colors/font_selected_color = Color(0, 0, 0, 1)
TabContainer/colors/font_unselected_color = Color(0, 0, 0, 1)
TabContainer/constants/icon_max_width = 0
TabContainer/constants/icon_separation = 0
TabContainer/constants/outline_size = 0
TabContainer/constants/side_margin = 0
TabContainer/font_sizes/font_size = 16
TabContainer/fonts/font = null
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/drop_mark = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource("StyleBoxTexture_4xuva")
TabContainer/styles/tab_disabled = SubResource("StyleBoxTexture_aru2k")
TabContainer/styles/tab_focus = SubResource("StyleBoxTexture_ii1ue")
TabContainer/styles/tab_hovered = SubResource("StyleBoxTexture_i5u3u")
TabContainer/styles/tab_selected = SubResource("StyleBoxTexture_k3awb")
TabContainer/styles/tab_unselected = SubResource("StyleBoxTexture_6jyse")
TabContainer/styles/tabbar_background = SubResource("StyleBoxTexture_n6ucm")

[sub_resource type="AtlasTexture" id="AtlasTexture_qmbn5"]
atlas = ExtResource("1_0fyep")
region = Rect2(256, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i8ur"]
atlas = ExtResource("1_0fyep")
region = Rect2(288, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxesw"]
atlas = ExtResource("1_0fyep")
region = Rect2(320, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qd5s"]
atlas = ExtResource("1_0fyep")
region = Rect2(352, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq633"]
atlas = ExtResource("1_0fyep")
region = Rect2(384, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbagd"]
atlas = ExtResource("1_0fyep")
region = Rect2(416, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tce0k"]
atlas = ExtResource("1_0fyep")
region = Rect2(448, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6cl1"]
atlas = ExtResource("1_0fyep")
region = Rect2(480, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wu32b"]
atlas = ExtResource("1_0fyep")
region = Rect2(256, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1wl1"]
atlas = ExtResource("1_0fyep")
region = Rect2(288, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xabny"]
atlas = ExtResource("1_0fyep")
region = Rect2(320, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rou2s"]
atlas = ExtResource("1_0fyep")
region = Rect2(352, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d47x"]
atlas = ExtResource("1_0fyep")
region = Rect2(384, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mh51c"]
atlas = ExtResource("1_0fyep")
region = Rect2(416, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hykkm"]
atlas = ExtResource("1_0fyep")
region = Rect2(448, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad7gs"]
atlas = ExtResource("1_0fyep")
region = Rect2(480, 288, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3jljr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmbn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i8ur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxesw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qd5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq633")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbagd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tce0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6cl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wu32b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1wl1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xabny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rou2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d47x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mh51c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hykkm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad7gs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qcvi6"]
size = Vector2(799, 71)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2ffi4"]
texture = ExtResource("4_i3bew")
region_rect = Rect2(360, 40, 24, 24)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v44iq"]
texture = ExtResource("4_i3bew")
region_rect = Rect2(360, 40, 24, 24)
modulate_color = Color(1, 0.760784, 0.721569, 1)

[sub_resource type="Theme" id="Theme_khg5y"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_disabled_color = Color(0, 0, 0, 1)
Button/colors/icon_focus_color = Color(0, 0, 0, 1)
Button/colors/icon_hover_color = Color(0, 0, 0, 1)
Button/colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_normal_color = Color(0, 0, 0, 1)
Button/colors/icon_pressed_color = Color(0, 0, 0, 1)
Button/constants/h_separation = 0
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 16
Button/fonts/font = null
Button/styles/disabled = SubResource("StyleBoxTexture_2ffi4")
Button/styles/focus = SubResource("StyleBoxTexture_2ffi4")
Button/styles/hover = SubResource("StyleBoxTexture_v44iq")
Button/styles/normal = SubResource("StyleBoxTexture_2ffi4")
Button/styles/pressed = SubResource("StyleBoxTexture_2ffi4")

[node name="StatsUI" type="Node2D" node_paths=PackedStringArray("HP_label", "STR_label", "ARM_label", "LCK_label")]
script = ExtResource("1_2cg24")
HP_label = NodePath("MoveAbleUI/TabContainer/Stats/HealthContainer/HealthStatLabel")
STR_label = NodePath("MoveAbleUI/TabContainer/Stats/StrengthContainer/StrengthStatLabel")
ARM_label = NodePath("MoveAbleUI/TabContainer/Stats/ArmorContainer/ArmorStatLabel")
LCK_label = NodePath("MoveAbleUI/TabContainer/Stats/LuckContainer/LuckStatLabel")

[node name="MoveAbleUI" type="Node2D" parent="."]
position = Vector2(212, 73)

[node name="TabContainer" type="TabContainer" parent="MoveAbleUI"]
texture_filter = 1
offset_right = 779.0
offset_bottom = 467.0
mouse_filter = 0
theme = SubResource("Theme_lio7j")
current_tab = 2
drag_to_rearrange_enabled = true

[node name="Stats" type="VFlowContainer" parent="MoveAbleUI/TabContainer"]
visible = false
layout_mode = 2

[node name="HealthContainer" type="HFlowContainer" parent="MoveAbleUI/TabContainer/Stats"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="HP" type="Control" parent="MoveAbleUI/TabContainer/Stats/HealthContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MoveAbleUI/TabContainer/Stats/HealthContainer/HP"]
position = Vector2(16, 16)
sprite_frames = SubResource("SpriteFrames_3jljr")

[node name="HealthStatLabel" type="RichTextLabel" parent="MoveAbleUI/TabContainer/Stats/HealthContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "HP: "

[node name="StrengthContainer" type="HFlowContainer" parent="MoveAbleUI/TabContainer/Stats"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Strength" type="Control" parent="MoveAbleUI/TabContainer/Stats/StrengthContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MoveAbleUI/TabContainer/Stats/StrengthContainer/Strength"]
position = Vector2(16, 16)
sprite_frames = SubResource("SpriteFrames_3jljr")
frame = 2

[node name="StrengthStatLabel" type="RichTextLabel" parent="MoveAbleUI/TabContainer/Stats/StrengthContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "Str:"

[node name="ArmorContainer" type="HFlowContainer" parent="MoveAbleUI/TabContainer/Stats"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Armor" type="Control" parent="MoveAbleUI/TabContainer/Stats/ArmorContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MoveAbleUI/TabContainer/Stats/ArmorContainer/Armor"]
position = Vector2(16, 16)
sprite_frames = SubResource("SpriteFrames_3jljr")
frame = 6

[node name="ArmorStatLabel" type="RichTextLabel" parent="MoveAbleUI/TabContainer/Stats/ArmorContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "Arm:"

[node name="LuckContainer" type="HFlowContainer" parent="MoveAbleUI/TabContainer/Stats"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2

[node name="Luck" type="Control" parent="MoveAbleUI/TabContainer/Stats/LuckContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MoveAbleUI/TabContainer/Stats/LuckContainer/Luck"]
position = Vector2(16, 16)
sprite_frames = SubResource("SpriteFrames_3jljr")
frame = 4

[node name="LuckStatLabel" type="RichTextLabel" parent="MoveAbleUI/TabContainer/Stats/LuckContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
text = "Lck:"

[node name="TextEdit" type="TextEdit" parent="MoveAbleUI/TabContainer"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="DebugPanel" parent="MoveAbleUI/TabContainer" instance=ExtResource("3_jl48w")]
layout_mode = 2

[node name="MouseDetector" type="Area2D" parent="MoveAbleUI"]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MoveAbleUI/MouseDetector"]
position = Vector2(389.5, 19.5)
shape = SubResource("RectangleShape2D_qcvi6")

[node name="Button" type="Button" parent="MoveAbleUI"]
texture_filter = 1
offset_left = 760.0
offset_top = -13.0
offset_right = 785.0
offset_bottom = 12.0
theme = SubResource("Theme_khg5y")

[connection signal="mouse_entered" from="MoveAbleUI/MouseDetector" to="." method="_on_mouse_detector_mouse_entered"]
[connection signal="mouse_exited" from="MoveAbleUI/MouseDetector" to="." method="_on_mouse_detector_mouse_exited"]
[connection signal="pressed" from="MoveAbleUI/Button" to="." method="_on_button_pressed"]
